--- a/src/app/Home/Home.module.scss
+++ b/src/app/Home/Home.module.scss
@@ -1,11 +1,10 @@
 .root {
     display: flex;
-    flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    width: 100%;
 }
-
 .content {
-    overflow-x: hidden;
+    display: flex;
+    justify-content: flex-start;
     width: 100%;
 }
