--- a/src/app/Home/screens/Form/Form.module.scss
+++ b/src/app/Home/screens/Form/Form.module.scss
@@ -47,8 +47,8 @@
     input {
         border: 1px solid black;
         border-radius: 8px;
-        padding: 15px;
-        font-size: 18px;
+        padding: 10px;
+        font-size: 13px;
         &:focus {
             outline: none;
         }
@@ -59,7 +59,7 @@
     button {
         border: none;
         color: white;
-        padding: 15px 30px;
+        padding: 5px 30px;
         font-size: 24px;
         border-radius: 5px;
         background: none;
@@ -68,14 +68,12 @@
         &:focus {
             outline: none;
         }
-        &:disabled {
-            background-color: grey;
-            &:hover {
-                background-color: grey;
-            }
-        }
         &:hover {
             background-color: rgba($color: #4CAF50, $alpha: 0.7);
         }
+        &[disabled] {
+            cursor: not-allowed;
+            background-color: #9575CD;
+        } 
     }
 }
