--- a/src/ui/RadioForm/RadioForm.module.scss
+++ b/src/ui/RadioForm/RadioForm.module.scss
@@ -4,15 +4,24 @@
     justify-content: center;
     margin: 15px 0;
 }
-
-.hasAnswerLabel {
+.formHasAnswer {
     flex-direction: column;
     align-items: initial;
     margin: 0 auto;
     width: max-content;
+}
 
-    .item {
-        margin: 10px 0;
+.itemHasAnswer {
+    margin-bottom: 30px;
+    & > label {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        & p {
+            font-size: 16px;
+            margin-left: 20px;
+            margin-bottom: 0;
+        }
     }
 }
 
